# bitrouter-autoresearch

./: .gitignore  README.md  pyproject.toml
analysis/: aggregate.py
configs/: bench.yaml
configs/openclaw_bitrouter_auto/: openclaw.json
configs/openclaw_direct_opus/: openclaw.json
src/bitrouter_bench/: __init__.py  api.py  cli.py  config.py  cost_meter.py  events.py  judge.py  openclaw.py  preflight.py  runner.py  task_generator.py  task_loader.py  trajectory.py  user_agent.py
tasks/easy/create-hello-file/: TASK.md
tasks/hard/multi-step-debug/: TASK.md
tasks/medium/web-research-flights/: TASK.md
